<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAD409"
    tools:context=".MainActivity1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="82dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="153dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/todomain" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="116dp"
        android:text="@string/screen_smartmain"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="editTextText"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/morningScreenTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/morning_screen_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText"
        android:autofillHints="editTextText2"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/afternoonScreenTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/afternoon_screen_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morningScreenTimeEditText"
        android:autofillHints="editTextText3"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/activityNotesEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="96dp"
        android:autofillHints="editTextText"
        android:ems="10"
        android:inputType="text"
        android:text="@string/activity_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afternoonScreenTimeEditText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/viewDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="75dp"
        android:text="@string/view_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clear_stored_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="75dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>